# petlibro-mcp-server

./: .gitignore  NOTICE  README.md  pets.toml  pyproject.toml
deploy/: deploy.sh  petlibro-webui.service
docs/superpowers/plans/: 2026-07-04-petlibro-mcp.md  2026-07-07-phase2-writeback.md  2026-07-07-phase4-webui.md  2026-07-07-rhythm-feeding-phase1.md
docs/superpowers/specs/: 2026-07-04-petlibro-mcp-design.md  2026-07-07-phase2-writeback-design.md  2026-07-07-phase4-webui-design.md  2026-07-07-rhythm-feeding-design.md
scripts/: analyze_history.py  dump_plans.py  probe_history.py  signal_probe.py  spike_writeback.py
src/petlibro_mcp/: __init__.py  client.py  config.py  history.py  planner.py  rhythm.py  schedule_diff.py  server.py  tools.py
tests/: test_client.py  test_config.py  test_history.py  test_planner.py  test_rhythm.py  test_rhythm_api.py  test_schedule_diff.py  test_server.py  test_smoke.py  test_tools.py  test_vendored.py  test_vendored_retry.py  test_webapp.py
webui/: app.py  rhythm_api.py
webui/static/: index.html
