[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petlibro-mcp-server"
version = "0.1.0"
description = "MCP server for PetLibro RFID feeders and Dockstream fountains."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "scarter4work" }]
dependencies = [
  "mcp>=1.9.0",
  "aiohttp>=3.9",
  "async-timeout>=4.0",
]

[project.optional-dependencies]
# httpx is TEST-only (Starlette TestClient); production serves via uvicorn.
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
petlibro-mcp = "petlibro_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/petlibro_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Treat DeprecationWarnings as errors (pristine), except Starlette's benign
# test-client notice recommending httpx2 — we deliberately keep trusted httpx
# for tests and do NOT add httpx2 as a dependency.
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
